search movie info update

--- a/css/style.css
+++ b/css/style.css
@@ -33,10 +33,7 @@ body {
     text-align: center;
 }
 
-.rt{
-    text-align: left;
+.ctr{
+    text-align: center;
 }
 
-.lt{
-    text-align: right;
-}
