--- a/include/movie.html
+++ b/include/movie.html
@@ -12,7 +12,7 @@
 <nav class="navbar navbar-default">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="index.html">Search Movie Info</a>
+            <a class="navbar-brand" href="../index.html">Search Movie Info</a>
         </div>
     </div>
 </nav>
@@ -27,12 +27,11 @@
 <!--footer-->
 <div class="container">
     <div class="footer">
-        <div class="col-md-6 lt">
-            <p>Coded with &hearts;</p>
+        <div class="col-md-9 col-lg-9 col-sm-9 ctr">
+            <p>Coded with &hearts;
+                &copy; 2017 <a href="http://www.stackit868.com">StackIT</a></p>
         </div>
-        <div class="col-md-6 rt">
-            <p>&copy; 2017 <a href="http://www.stackit868.com">StackIT</a></p>
-        </div>
+    
     </div>
 </div>
 
